# AI-Inference-Optimization-Platform

./: .env.example  .gitignore  README.md  pyproject.toml
src/ai_inference_optimization_platform/: main.py
src/ai_inference_optimization_platform/cache/: redis_client.py
src/ai_inference_optimization_platform/config/: settings.py
src/ai_inference_optimization_platform/exceptions/: custom_exceptions.py  handlers.py
src/ai_inference_optimization_platform/logging/: logger.py
src/ai_inference_optimization_platform/middleware/: request_timer.py
src/ai_inference_optimization_platform/schemas/: requests.py  responses.py
src/ai_inference_optimization_platform/services/: base.py  cache_service.py  embedding_service.py  llm_service.py  metrics_service.py  semantic_cache_service.py
src/ai_inference_optimization_platform/services/embeddings/: embedding_factory.py  embedding_provider.py  mock_embedding_provider.py
src/ai_inference_optimization_platform/services/providers/: base_provider.py  embedding_provider.py  mock_provider.py  ollama_provider.py  provider_factory.py
src/ai_inference_optimization_platform/utils/: hashing.py  prompt_normalizer.py  vector.py
tests/: test_vector.py
