[project]
name = "ai-inference-optimization-platform"
version = "0.1.0"
description = "High-performance AI inference and optimization platform with semantic caching and token optimization."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Ceren Okyay" }
]

dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_inference_optimization_platform"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
